# jcopengl

./: CMakeLists.txt  README.md
codegen/: defines.txt  generate_enums.lua  generate_enums.sh  glext.h
include/jclib/gl/: gl.hpp  glenum.hpp  globject.hpp  glparam.hpp
include/jclib/gl/KHR/: khrplatform.h
include/jclib/gl/gl/: glsym.h
source/: CMakeLists.txt  source.cpp
